--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <body>
 
     <div class="container">
-
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>fechar</span>
+        </div>
         <header>
 
 
@@ -24,14 +29,30 @@
                 <img src="Imagens/Header.jpg" alt="Imagem">
             </div>
             <div class="banner">
-                <h1>Future Web Developer &  <br> Front End Designer</h1>
+                <h1>Future Web Developer & <br> Front End Designer</h1>
                 <p>Ramon de Sá</p>
                 <button>Saiba mais</button>
             </div>
         </header>
-
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="reng-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="reng-link"> Conhecimento</a></li>
+                    <li class="menu-item"><a href="#" class="reng-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="reng-link">Contatos</a></li>
+                    <li class="menu-item"><a href="#" class="reng-link">Orçamentos</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href=""><i class="fab fa-square-facebook"></i></a>
+                <a href=""><i class="fab fa-square-github"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-square-instagram"></i></a>
+            </div>
+        </div>
     </div>
 
 </body>
-
+<script src="script.js"></script>
 </html>
